--- a/myScanShopv1/app/src/main/res/layout/activity_menu.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_menu.xml
@@ -47,8 +47,8 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/press_button"
         android:backgroundTint="@color/myScanShop"
-        android:text="Usuarios"
-        android:textSize="24sp"
+        android:text="Datos de Facturación"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
