--- a/myScanShopv1/app/src/main/res/layout/activity_usuarios.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_usuarios.xml
@@ -43,6 +43,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:cacheColorHint="@color/backgroundDefaultTFG"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
