--- a/myScanShopv1/app/src/main/res/layout/grid_item_main.xml
+++ b/myScanShopv1/app/src/main/res/layout/grid_item_main.xml
@@ -7,41 +7,37 @@
     android:backgroundTint="#2B2A2A"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="2dp"
+    android:padding="0dp"
     android:scrollbarSize="2dp">
 
     <ImageView
-        android:id="@+id/imagenGrid_start"
-        android:layout_width="115dp"
-        android:layout_height="115dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="4dp"
-        android:cropToPadding="true"
-        android:scaleType="centerInside"
+        android:id="@+id/imagenGrid"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:cropToPadding="false"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:srcCompat="@drawable/logo" />
 
     <TextView
-        android:id="@+id/labelgrid_start"
+        android:id="@+id/labelgrid"
         android:layout_width="0dp"
-        android:layout_height="24dp"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="4dp"
-        android:background="#BE393838"
+        android:layout_height="wrap_content"
+        android:background="#994A4949"
         android:gravity="center_horizontal"
-        android:maxLines="1"
+        android:maxLines="2"
         android:padding="0dp"
+        android:text="Nombre del Producto"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imagenGrid_start"
-        app:layout_constraintStart_toStartOf="@+id/imagenGrid_start" />
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imagenGrid"
+        app:layout_constraintEnd_toEndOf="@+id/imagenGrid"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imagenGrid" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
