--- a/myScanShopv1/app/src/main/res/layout/activity_add_manual.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_add_manual.xml
@@ -141,7 +141,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
-        android:text="Añadir"
+        android:background="@drawable/press_button"
+        android:text="Añadir a la cesta"
         android:textSize="20sp"
         app:cornerRadius="@dimen/cardview_compat_inset_shadow"
         app:layout_constraintEnd_toEndOf="parent"
