--- a/myScanShopv1/app/src/main/res/layout/activity_main.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_main.xml
@@ -27,22 +27,21 @@
 
     <TextView
         android:id="@+id/labelUser_toolbar"
-        android:layout_width="0dp"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:contextClickable="true"
-        android:text="MyScanShop"
+        android:text="Punto de Venta"
         android:textAlignment="center"
         android:textColor="#6A6A6A"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.752"
+        app:layout_constraintEnd_toEndOf="@+id/toolbar"
         app:layout_constraintStart_toStartOf="@+id/toolbar"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <GridView
         android:id="@+id/gridList_main"
@@ -137,7 +136,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/botonScan_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
