--- a/myScanShopv1/app/src/main/res/layout/activity_inventario.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_inventario.xml
@@ -7,6 +7,19 @@
     android:background="@color/backgroundDefaultTFG"
     tools:context=".InventarioActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/botonAdd_inventario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@color/myScanShop"
+        android:clickable="true"
+        app:backgroundTint="@color/myScanShop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add" />
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_inventario"
         android:layout_width="409dp"
@@ -21,19 +34,6 @@
         app:titleMarginStart="90dp"
         app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
         app:titleTextColor="#566263" />
-
-    <ImageButton
-        android:id="@+id/boton_add_inventario"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:background="#00FFFFFF"
-        android:backgroundTint="#0B0A0A"
-        android:foregroundTint="#020202"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar_inventario"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_add" />
 
     <ListView
         android:id="@+id/listViewProducto_inventario"
