--- a/myScanShopv1/app/src/main/res/values/themes.xml
+++ b/myScanShopv1/app/src/main/res/values/themes.xml
@@ -1,19 +1,28 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.MyScanShop" parent="Theme.MaterialComponents.NoActionBar">
+    <!--<style name="Theme.MyScanShop" parent="Theme.MaterialComponents.NoActionBar">-->
         <!-- Primary brand color. -->
         <item name="backgroundColor">@color/backgroundDefaultTFG</item>
         <item name="colorPrimary">@color/myScanShop</item>
-        <item name="colorPrimaryVariant">@color/myScanShop</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/gris</item>
+        <item name="colorOnPrimary">#FAFAFA</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">#D5DCDC</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/white</item>
+        <item name="colorOnSecondary">#D6D5D5</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/myScanShopToolbar</item>
+        <item name="android:homeAsUpIndicator">@drawable/backcustomarrow</item>
 
         <!-- Customize your theme here. -->
+       
     </style>
+    <style name="BotonNuevo" >
+        <item name="backgroundTint">@color/gris</item>
+        <item name="android:shape">@drawable/redondear_botonesdos</item>
+    </style>
+
+
 
 </resources>
