--- a/myScanShopv1/app/src/main/res/drawable/press_button.xml
+++ b/myScanShopv1/app/src/main/res/drawable/press_button.xml
@@ -4,6 +4,10 @@
         android:drawable="@drawable/redondear_botones_pressed"/>
     <item android:state_pressed="false"
     android:drawable="@drawable/redondear_botones"/>
+    <item android:state_enabled="true"
+        android:drawable="@drawable/boton_inhabilitado"/>
+    <item android:state_enabled="true"
+        android:drawable="@drawable/redondear_botones"/>
 
 
 </selector>
