--- a/myScanShopv1/app/src/main/res/layout/activity_caja.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_caja.xml
@@ -7,13 +7,14 @@
     android:background="@color/backgroundDefaultTFG"
     tools:context=".CajaActivity">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar_caja"
-        android:layout_width="409dp"
+    <ProgressBar
+        android:id="@+id/progressBar_caja"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/myScanShopToolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
+        android:backgroundTint="@color/myScanShop"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,48 +24,27 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:text="Caja:"
         android:textColor="#424242"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_caja" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/lista_caja"
         android:layout_width="394dp"
-        android:layout_height="375dp"
+        android:layout_height="360dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label1_caja" />
+        app:layout_constraintTop_toBottomOf="@+id/label1_caja">
 
-    <Button
-        android:id="@+id/botonFactura_caja"
-        android:layout_width="wrap_content"
-        android:layout_height="85dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:enabled="false"
-        android:text="Generar Factura"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/totalFactura_caja" />
-
-    <CheckBox
-        android:id="@+id/check_caja"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:text="Pagado"
-        android:textColor="#353434"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label2_caja" />
+    </ListView>
 
     <TextView
         android:id="@+id/label2_caja"
@@ -101,4 +81,35 @@
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lista_caja" />
+
+    <Button
+        android:id="@+id/botonIdCliente_caja"
+        style="@style/BotonColor2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/press_button"
+        android:text="Identificar Cliente"
+        android:textColor="@color/gris"
+        app:layout_constraintBottom_toTopOf="@+id/botonFactura_caja"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/botonFactura_caja"
+        android:layout_width="366dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/press_button"
+        android:enabled="false"
+        android:saveEnabled="false"
+        android:text="Generar factura y finalizar"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
