--- a/myScanShopv1/app/src/main/res/layout/activity_main.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,8 @@
             app:icon="@android:drawable/ic_menu_edit"
             app:iconGravity="textEnd"
             app:iconSize="30dp"
-            app:iconTint="#DAD7D7" />
+            app:iconTint="#DAD7D7"
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <SearchView
             android:id="@+id/searchBar_main"
@@ -105,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/press_button"
-            android:backgroundTint="#7F9393" >
+            android:backgroundTint="#A8B1B1">
 
         </SearchView>
 
@@ -139,15 +140,17 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/botonScan_main"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="53dp"
+        android:layout_height="55dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="120dp"
+        android:background="@color/myScanShop"
+        android:backgroundTint="@color/myScanShop"
         android:clickable="true"
-        app:backgroundTint="@color/myScanShop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:maxImageSize="30dp"
-        app:srcCompat="@drawable/barcodeicon" />
+        app:maxImageSize="25dp"
+        app:srcCompat="@drawable/barcodeicon"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
