--- a/myScanShopv1/app/src/main/res/values/themes.xml
+++ b/myScanShopv1/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyScanShop" parent="Theme.MaterialComponents.NoActionBar">
+    <style name="Theme.MyScanShop" parent="Theme.MaterialComponents.Light.NoActionBar">
     <!--<style name="Theme.MyScanShop" parent="Theme.MaterialComponents.NoActionBar">-->
         <!-- Primary brand color. -->
         <item name="backgroundColor">@color/backgroundDefaultTFG</item>
@@ -21,7 +21,14 @@
     <style name="BotonNuevo" >
         <item name="backgroundTint">@color/gris</item>
         <item name="android:shape">@drawable/redondear_botonesdos</item>
+    </style><style name="BotonColor2" >
+        <item name="backgroundTint">@color/myScanShopToolbar</item>
+        <item name="android:shape">@drawable/redondear_botonesdos</item>
+    </style><style name="BotonDeshabilitado" >
+        <item name="backgroundTint">#B3B3B3</item>
+        <item name="android:shape">@drawable/redondear_botonesdos</item>
     </style>
+
 
 
 
