--- a/myScanShopv1/app/src/main/res/layout/activity_actualizar_cliente.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_actualizar_cliente.xml
@@ -122,23 +122,35 @@
         android:layout_width="220sp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
         android:background="@drawable/press_button"
         android:text="Cancelar"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botonActualizar_updateCliente" />
 
     <Button
         android:id="@+id/botonActualizar_updateCliente"
         android:layout_width="220sp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/press_button"
         android:text="Actualizar Datos"
-        app:layout_constraintBottom_toTopOf="@+id/botonCancelar_updateCliente"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/labelDni_updateCliente" />
+
+    <Button
+        android:id="@+id/botonBorrar_updateCliente"
+        android:layout_width="193dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/backgroundDefaultTFG"
+        android:text="borrar"
+        android:textColor="#D60404"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/botonCancelar_updateCliente" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
