--- a/myScanShopv1/app/src/main/res/layout/activity_add_producto_inventario.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_add_producto_inventario.xml
@@ -83,7 +83,7 @@
         android:backgroundTint="#858484"
         android:ems="10"
         android:hint="0.0"
-        android:inputType="number|numberDecimal"
+        android:inputType="numberDecimal"
         android:shadowColor="#858484"
         android:textAlignment="textEnd"
         android:textColor="#131313"
@@ -141,11 +141,12 @@
 
     <Button
         android:id="@+id/botonGuardar_add"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="44dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/press_button"
         android:text="Guardar"
         android:textSize="20sp"
         app:cornerRadius="@dimen/cardview_compat_inset_shadow"
@@ -159,17 +160,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/press_button"
         android:text="añadir imagen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/botonCancel_add"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        style="@style/BotonNuevo"
+        android:layout_width="278dp"
+        android:layout_height="46dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="32dp"
+        android:background="@drawable/press_button"
         android:text="Cancelar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
