--- a/myScanShopv1/app/src/main/res/layout/activity_caja.xml
+++ b/myScanShopv1/app/src/main/res/layout/activity_caja.xml
@@ -16,7 +16,8 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar_caja" />
 
     <ListView
         android:id="@+id/lista_caja"
